tests/compile_fail/bundle_macro_unsupported_constructor.rs
fn main() {
    let _ = rrtl::bundle! {
        Bad {
            data: bits(8),
        }
    };
}
